objects/amc__Milestone__c.object
<CustomObject>
    <fields>
        <fullName>amc__Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prevents the Milestone appearing across various pages/components.</description>
        <inlineHelpText>Prevents the Milestone appearing across various pages/components.</inlineHelpText>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Baseline_End_Date__c</fullName>
        <inlineHelpText>Identifies the latest Baseline End Date from child Action records</inlineHelpText>
        <label>Baseline End Date</label>
        <summarizedField>amc__Action__c.amc__Baseline_End_Date__c</summarizedField>
        <summaryForeignKey>amc__Action__c.amc__Milestone__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>amc__Baseline_Start_Date__c</fullName>
        <inlineHelpText>Identifies the earliest Baseline Start Date from child Action records</inlineHelpText>
        <label>Baseline Start Date</label>
        <summarizedField>amc__Action__c.amc__Baseline_Start_Date__c</summarizedField>
        <summaryForeignKey>amc__Action__c.amc__Milestone__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>amc__Billing_Cycle__c</fullName>
        <description>Used within Apex Trigger logic only.</description>
        <formula>TEXT(amc__Project__r.amc__Billing_Cycle__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Cycle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Billing_Type__c</fullName>
        <description>Used in Apex Trigger logic only.</description>
        <formula>TEXT( amc__Project__r.amc__Billing_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Complete_Actions__c</fullName>
        <inlineHelpText>Roll Up Summary: Counts all Actions relating to this Milestone where the Action Status = Complete</inlineHelpText>
        <label>Complete Actions</label>
        <summaryFilterItems>
            <field>amc__Action__c.amc__Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </summaryFilterItems>
        <summaryForeignKey>amc__Action__c.amc__Milestone__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>amc__Date_Format__c</fullName>
        <description>Used primarily as a reference in Apex code, not required on page layout.</description>
        <formula>amc__Project__r.amc__Date_Format__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Format</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__End_Date__c</fullName>
        <label>End Date</label>
        <summarizedField>amc__Action__c.amc__End_Date__c</summarizedField>
        <summaryForeignKey>amc__Action__c.amc__Milestone__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>amc__Exclude_from_Billable_Capacity_Indicator__c</fullName>
        <formula>If(amc__Project__r.amc__Exclude_from_Billable_Capacity__c = TRUE, TRUE, amc__Exclude_from_Billable_Capacity__c)</formula>
        <inlineHelpText>Formula: Identifies if the Actions related to this Milestone should be excluded from Billable Capacity</inlineHelpText>
        <label>Exclude from Billable Capacity Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Exclude_from_Billable_Capacity__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if the Actions related to this Milestone should be excluded from Billable Capacity</inlineHelpText>
        <label>Exclude from Billable Capacity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Exclude_from_Client_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if this Milestone should be excluded from the Client Overview Page</inlineHelpText>
        <label>Exclude from Client Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Exclude_from_Gantt__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies whether this Milestone should be hidden from the Gantt Chart</inlineHelpText>
        <label>Exclude from Gantt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Exclude_from_Scheduler_Indicator__c</fullName>
        <formula>IF(amc__Project__r.amc__Exclude_from_Scheduler__c = TRUE, TRUE, amc__Exclude_from_Scheduler__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates if this Milestone&apos;s Actions should be hidden from the Scheduler. If the Milestone &apos;Exclude from Scheduler&apos; Field is set to TRUE, it takes this value, otherwise it takes the value from the Project &apos;Exclude from Scheduler&apos; Field.</inlineHelpText>
        <label>Exclude from Scheduler Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Exclude_from_Scheduler__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if this Milestone&apos;s Actions should be excluded from the Scheduler</inlineHelpText>
        <label>Exclude from Scheduler</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Exclude_from_Status_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if this Milestone should be excluded from the Project Status Report</inlineHelpText>
        <label>Exclude from Status Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Exclude_from_Timesheet_Indicator__c</fullName>
        <formula>IF(amc__Project__r.amc__Exclude_from_Timesheet__c = TRUE, TRUE, amc__Exclude_from_Timesheet__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Prevents Checked Actions from appearing on the Timesheet</inlineHelpText>
        <label>Exclude from Timesheet Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Exclude_from_Timesheet__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Prevents Child Actions from appearing on the Timesheet.</inlineHelpText>
        <label>Exclude from Timesheet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Expense_Summary__c</fullName>
        <label>Material Costs Completed</label>
        <summarizedField>amc__Action__c.amc__Expense_Summary__c</summarizedField>
        <summaryForeignKey>amc__Action__c.amc__Milestone__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>amc__Financial_Tracker__c</fullName>
        <formula>TEXT(amc__Hours_Completed_Non_Billable__c) &amp; TEXT(amc__Hours_Completed_Value_Cost__c) &amp; TEXT(amc__Hours_Remaining_Non_Billable__c) &amp; TEXT(amc__Hours_Remaining_Value_Cost__c) &amp; TEXT(amc__Hours_Scheduled_Non_Billable__c) &amp; TEXT(amc__Hours_Scheduled_Value_Cost__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used by milestone  to track financial updates.</inlineHelpText>
        <label>Financial Tracker</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Gantt_Collapsed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, indicates the Milestones is collapsed on the Gantt.</description>
        <label>Gantt Collapsed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Has_Dependent_Actions__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not for page layout, used for batch script only.</inlineHelpText>
        <label>Has Dependent Actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Completed_Cost__c</fullName>
        <inlineHelpText>Summarises the Hours Completed Cost field for all related Actions. (Previously Labelled Hours Completed Cost)</inlineHelpText>
        <label>Hours Completed Value (Billable)</label>
        <summarizedField>amc__Action__c.amc__Hours_Completed_Cost__c</summarizedField>
        <summaryForeignKey>amc__Action__c.amc__Milestone__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Completed_Non_Billable__c</fullName>
        <inlineHelpText>Identifies the number of non billable hours completed for this Milestone</inlineHelpText>
        <label>Hours Completed - Non Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Completed_Value_Cost__c</fullName>
        <inlineHelpText>Summarises the Hours Completed Value of the Milestone Costs based on the Total Hours Completed</inlineHelpText>
        <label>Hours Completed Value (Cost)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Completed__c</fullName>
        <inlineHelpText>Identifies the number of billable hours completed for this Milestone. (Previously labelled Hours Completed)</inlineHelpText>
        <label>Hours Completed - Billable</label>
        <summarizedField>amc__Action__c.amc__Hours_Completed__c</summarizedField>
        <summaryForeignKey>amc__Action__c.amc__Milestone__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Remaining_Cost__c</fullName>
        <inlineHelpText>Summarises the Hours Remaining Cost field for all related Actions. (Previously Labelled Hours Remaining Cost)</inlineHelpText>
        <label>Hours Remaining Value (Billable)</label>
        <summarizedField>amc__Action__c.amc__Hours_Remaining_Cost__c</summarizedField>
        <summaryForeignKey>amc__Action__c.amc__Milestone__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Remaining_Non_Billable__c</fullName>
        <inlineHelpText>Identifies the number of non billable hours remaining for this Milestone</inlineHelpText>
        <label>Hours Remaining - Non Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Remaining_Value_Cost__c</fullName>
        <inlineHelpText>Summarises the Hours Remaining Value of the Milestone Costs based on the Total Hours Remaining</inlineHelpText>
        <label>Hours Remaining Value (Cost)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Remaining__c</fullName>
        <inlineHelpText>Identifies the number of billable hours remaining for this Milestone. (Previously labelled Hours Remaining)</inlineHelpText>
        <label>Hours Remaining - Billable</label>
        <summarizedField>amc__Action__c.amc__Hours_Remaining__c</summarizedField>
        <summaryForeignKey>amc__Action__c.amc__Milestone__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Scheduled_Cost__c</fullName>
        <inlineHelpText>Summarises the Hours Scheduled Cost field for all related Actions. (Previously Labelled Hours Scheduled Cost)</inlineHelpText>
        <label>Hours Scheduled Value (Billable)</label>
        <summarizedField>amc__Action__c.amc__Hours_Scheduled_Cost__c</summarizedField>
        <summaryForeignKey>amc__Action__c.amc__Milestone__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Scheduled_Non_Billable__c</fullName>
        <inlineHelpText>Identifies the number of non billable hours scheduled for this Milestone</inlineHelpText>
        <label>Hours Scheduled - Non Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Scheduled_Value_Cost__c</fullName>
        <inlineHelpText>Summarises the Hours Scheduled Value of the Milestone Costs based on Total Hours Scheduled</inlineHelpText>
        <label>Hours Scheduled Value (Cost)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Scheduled__c</fullName>
        <inlineHelpText>Identifies the Hours Scheduled - Billable across all Actions relating to this Milestone. (Previously Labelled Hours Scheduled)</inlineHelpText>
        <label>Hours Scheduled - Billable</label>
        <summarizedField>amc__Action__c.amc__Hours_Scheduled__c</summarizedField>
        <summaryForeignKey>amc__Action__c.amc__Milestone__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>amc__Invoice_Amount__c</fullName>
        <description>The Amount the Billing Event Invoice should be raised for if this milestone is for a Fixed Price Project. (If empty, Milestone Budget will be used. If that’s empty, Hours Scheduled Value (Billable) will be used). Not applicable for T&amp;M Projects.</description>
        <inlineHelpText>The Amount the Billing Event Invoice should be raised for if this milestone is for a Fixed Price Project. (If empty, Milestone Budget will be used. If that’s empty, Hours Scheduled Value (Billable) will be used). Not applicable for T&amp;M Projects.</inlineHelpText>
        <label>Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Invoice_on_Completion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies if a Billing Event Invoice should be raised when this Milestone is set to Complete</description>
        <inlineHelpText>Identifies if a Billing Event Invoice should be raised when this Milestone is set to Complete</inlineHelpText>
        <label>Invoice on Completion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Is_Recurring__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if this Milestone will be recurring</inlineHelpText>
        <label>Is Recurring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__KPI_End_Date_Variance__c</fullName>
        <formula>amc__Baseline_End_Date__c - amc__End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Calculates Baseline End Date - End Date</inlineHelpText>
        <label>KPI: End Date Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__KPI_P_L_Variance__c</fullName>
        <formula>amc__P_L_Scheduled__c - amc__P_L_Forecast__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Calculates P&amp;L Scheduled - P&amp;L Forecast</inlineHelpText>
        <label>KPI: P&amp;L Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__KPI_Start_Date_Variance__c</fullName>
        <formula>amc__Baseline_Start_Date__c - amc__Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Calculates Baseline Start Date - Start Date</inlineHelpText>
        <label>KPI: Start Date Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__KPI_Total_Hours_Variance__c</fullName>
        <formula>amc__Total_Hours_Scheduled__c - (amc__Total_Hours_Completed__c + amc__Total_Hours_Remaining__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Calculates Total Hours Scheduled - (Total Hours Completed + Total Hours Remaining)</inlineHelpText>
        <label>KPI: Total Hours Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Material_Costs_Remaining__c</fullName>
        <formula>amc__Material_Costs_Scheduled__c -  amc__Expense_Summary__c</formula>
        <label>Material Costs Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Material_Costs_Scheduled__c</fullName>
        <inlineHelpText>Summarises the Material Costs Scheduled field for all related Actions</inlineHelpText>
        <label>Material Costs Scheduled</label>
        <summarizedField>amc__Action__c.amc__Material_Costs_Scheduled__c</summarizedField>
        <summaryForeignKey>amc__Action__c.amc__Milestone__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>amc__Milestone_Budget__c</fullName>
        <inlineHelpText>Identifies the budget allocated to this Milestone</inlineHelpText>
        <label>Milestone Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Milestone_Completion_Status__c</fullName>
        <formula>If(ISPICKVAL(amc__Status__c, &quot;Complete&quot;) , 1 ,If(amc__Hours_Completed__c = 0, If(amc__Total_Actions__c &gt; 0, amc__Complete_Actions__c / amc__Total_Actions__c, 0), amc__Hours_Completed__c / ( amc__Hours_Completed__c + amc__Hours_Remaining__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If Status = Complete, will display 100%. If Hours Completed = 0 will display 0, otherwise Hours Completed / (Hours Completed + Hours Remaining)</inlineHelpText>
        <label>Milestone Completion Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>amc__Milestone_Deadline__c</fullName>
        <inlineHelpText>Identifies the date this Milestone must be delivered by. A Validation Rule exists on the Action Object that can be used to ensure Action End Dates do not exceed this Date.</inlineHelpText>
        <label>Milestone Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>amc__Milestone_Notes_RT__c</fullName>
        <inlineHelpText>Detailed Notes about the Milestone</inlineHelpText>
        <label>Milestone Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>amc__Milestone_Notes__c</fullName>
        <label>Milestone Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>amc__Milestone_Owner_Current_User__c</fullName>
        <formula>IF(amc__Milestone_Owner__r.amc__User__r.Id  = $User.Id, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies if the User viewing the record is the User linked to the Role that is the Milestone Owner. If true, 1 is displayed, if false, 0 is displayed. This field can be used to create Dynamic List View / Report Filters</inlineHelpText>
        <label>Milestone Owner Current User</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Milestone_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Milestone Owner</label>
        <referenceTo>amc__Role__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Milestone_Sort_Order__c</fullName>
        <inlineHelpText>If specified, the Gantt Chart will sort by this field first in ascending order.  Also applied to the Project Overview Tab.</inlineHelpText>
        <label>Milestone Sort Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Milestone_Type__c</fullName>
        <description>It is recommended that you add your own values in to this picklist field</description>
        <inlineHelpText>Can be used to identify the type / category of the Milestone</inlineHelpText>
        <label>Milestone Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Success Handover</fullName>
                </value>
                <value>
                    <fullName>Go Live</fullName>
                </value>
                <value>
                    <fullName>TBC</fullName>
                    <isActive>false</isActive>
                    <label>TBC</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Non_Billable_Indicator__c</fullName>
        <formula>IF(amc__Non_Billable__c = TRUE, TRUE,  amc__Project__r.amc__Non_Billable__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates if this Milestone is classified as Non Billable. If the Milestone &apos;Non Billable&apos; Field is set to TRUE, it takes this value, otherwise it takes the value from the Project &apos;Non Billable&apos; Field.</inlineHelpText>
        <label>Non Billable Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Non_Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if this Milestone is Non Billable</inlineHelpText>
        <label>Non Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Number_of_Recurrences__c</fullName>
        <inlineHelpText>Identifies the number of times this Milestone should be recurred</inlineHelpText>
        <label>Number of Recurrences</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Old_SFDC_ID__c</fullName>
        <externalId>true</externalId>
        <label>Old SFDC ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__P_L_Actual__c</fullName>
        <formula>IF( ISPICKVAL( amc__Project__r.amc__Billing_Type__c , &quot;Fixed Price&quot;) , IF(amc__Milestone_Budget__c &gt; 0, amc__Milestone_Budget__c, (amc__Hours_Scheduled_Cost__c + amc__Material_Costs_Scheduled__c)) - (amc__Hours_Completed_Value_Cost__c + amc__Expense_Summary__c), (amc__Hours_Completed_Cost__c + amc__Material_Costs_Scheduled__c ) - (amc__Hours_Completed_Value_Cost__c+ amc__Expense_Summary__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies the P&amp;L for the Milestone based on the Actual figures. If Fixed Price and Budget &gt; 0, use Milestone Budget, otherwise use Hours Scheduled Billable Value. If Not FP, use Completed Billable and Cost Values</inlineHelpText>
        <label>P&amp;L (Actual)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__P_L_Forecast__c</fullName>
        <formula>IF( ISPICKVAL( amc__Project__r.amc__Billing_Type__c , &quot;Fixed Price&quot;) , IF(amc__Milestone_Budget__c &gt; 0, amc__Milestone_Budget__c, (amc__Hours_Scheduled_Cost__c + amc__Material_Costs_Scheduled__c )) - (amc__Hours_Completed_Value_Cost__c + amc__Hours_Remaining_Value_Cost__c + amc__Expense_Summary__c + amc__Material_Costs_Remaining__c)
, 
( amc__Hours_Completed_Cost__c + amc__Hours_Remaining_Cost__c + amc__Material_Costs_Scheduled__c) - ( amc__Hours_Completed_Value_Cost__c + amc__Hours_Remaining_Value_Cost__c + amc__Expense_Summary__c + amc__Material_Costs_Remaining__c) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies the P&amp;L for the Milestone Forecast figures (Completed + Remaining). If Fixed Price and Milestone Budget &gt; 0, use Milestone Budget, otherwise use Scheduled Billable Value. If Not FP, use Completed &amp; Remaining Billable and Cost Values</inlineHelpText>
        <label>P&amp;L (Forecast)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__P_L_Scheduled__c</fullName>
        <formula>IF( ISPICKVAL( amc__Project__r.amc__Billing_Type__c , &quot;Fixed Price&quot;) , IF(amc__Milestone_Budget__c &gt; 0, amc__Milestone_Budget__c, (amc__Hours_Scheduled_Cost__c + amc__Material_Costs_Scheduled__c )) - (amc__Hours_Scheduled_Value_Cost__c + amc__Material_Costs_Scheduled__c), (amc__Hours_Scheduled_Cost__c + amc__Material_Costs_Scheduled__c) - (amc__Hours_Scheduled_Value_Cost__c + amc__Material_Costs_Scheduled__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies the P&amp;L for the Milestone based on the Scheduled figures. If Fixed Price, and Milestone Budget &gt; 0, use Milestone Budget, otherwise use Hours Scheduled Billable Value. Otherwise if not Fixed Price, use Hours Scheduled Billable Value</inlineHelpText>
        <label>P&amp;L (Scheduled)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Project_Name__c</fullName>
        <description>Used in Apex Trigger logic only.</description>
        <formula>amc__Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Project_Payment_Terms__c</fullName>
        <description>Used in Apex Trigger logic only.</description>
        <formula>TEXT( amc__Project__r.amc__Payment_Terms__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Payment Terms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Project__c</fullName>
        <label>Project</label>
        <referenceTo>amc__Project__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>amc__Recurrences_Remaining__c</fullName>
        <inlineHelpText>Identifies how many more recurrences are remaining</inlineHelpText>
        <label>Recurrences Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Recurring_Frequency__c</fullName>
        <inlineHelpText>Identifies the frequency of the recurring schedule for this Action</inlineHelpText>
        <label>Recurring Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>amc__Frequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Requirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Links to the Requirement record that this Milestone was created from</inlineHelpText>
        <label>Requirement</label>
        <referenceTo>amc__Requirement__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Start_Date__c</fullName>
        <label>Start Date</label>
        <summarizedField>amc__Action__c.amc__Start_Date__c</summarizedField>
        <summaryForeignKey>amc__Action__c.amc__Milestone__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>amc__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                    <default>true</default>
                    <label>Planned</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Tax_Rate__c</fullName>
        <description>Used in Apex Trigger logic only</description>
        <formula>amc__Project__r.amc__Tax_Label__r.amc__Tax_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>amc__Total_Actions__c</fullName>
        <inlineHelpText>Roll Up Summary: Counts all Actions relating to this Milestone excluding where the Action Status = Cancelled</inlineHelpText>
        <label>Total Actions</label>
        <summaryFilterItems>
            <field>amc__Action__c.amc__Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>amc__Action__c.amc__Milestone__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>amc__Total_Hours_Completed__c</fullName>
        <formula>amc__Hours_Completed__c + amc__Hours_Completed_Non_Billable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula Field: Sum of the total hours completed, billable and non billable</inlineHelpText>
        <label>Total Hours Completed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Total_Hours_Remaining__c</fullName>
        <formula>amc__Hours_Remaining__c + amc__Hours_Remaining_Non_Billable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula Field: Sum of the total hours remaining, billable and non billable</inlineHelpText>
        <label>Total Hours Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Total_Hours_Scheduled__c</fullName>
        <formula>amc__Hours_Scheduled__c + amc__Hours_Scheduled_Non_Billable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula Field: Sum of the total hours scheduled, billable and non billable</inlineHelpText>
        <label>Total Hours Scheduled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Unallocated_Milestone_Budget__c</fullName>
        <formula>amc__Milestone_Budget__c -  amc__Hours_Scheduled_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies how much of the Milestone Budget has not yet been allocated to an Action. Formula: Milestone Budget - Hours Scheduled Value (Billable)</inlineHelpText>
        <label>Unallocated Milestone Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Milestone</label>
    <listViews>
        <fullName>amc__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>amc__Recurring_Validation_Frequency</fullName>
        <active>true</active>
        <description>If Milestone ‘Is Recurring’ = TRUE ensure ‘Number of Recurrences’ and ‘Recurring Frequency’ = TRUE</description>
        <errorConditionFormula>AND(amc__Is_Recurring__c, ISBLANK(TEXT(amc__Recurring_Frequency__c)))</errorConditionFormula>
        <errorDisplayField>amc__Recurring_Frequency__c</errorDisplayField>
        <errorMessage>You must set the Recurring Frequency</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>amc__Recurring_Validation_Number</fullName>
        <active>true</active>
        <description>If Milestone ‘Is Recurring’ = TRUE ensure ‘Number of Recurrences’ and ‘Recurring Frequency’ = TRUE</description>
        <errorConditionFormula>AND(amc__Is_Recurring__c, ISBLANK(amc__Number_of_Recurrences__c))</errorConditionFormula>
        <errorDisplayField>amc__Number_of_Recurrences__c</errorDisplayField>
        <errorMessage>You must set the Number of Recurrences</errorMessage>
    </validationRules>
</CustomObject>